add bookings and comments functionality